--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,91 @@
     transform: translateY(0px);
   }
 }
+.login-container{
+  display: flex;
+  flex-direction: column;
+   margin: 0 auto;
+  margin-top: 10%;
+  
+  padding: 15px;
+  border: 1px solid;
+  border-radius: 8%;
+}
+.login-container .phone-input{
+  width: 60%;
+  margin: 0 auto;
+  padding: 15px;
+}
+#recaptcha-container{
+  margin: 0 auto;
+  width: 60%;
+  margin-bottom: 5%;
+}
+.login-container button{
+  padding: 10px;
+  width: 30%;
+  background-color: transparent;
+  border: none;
+  border: 1px solid ;
+  border-radius: 8px;
+}
+.login-container button:hover{
+  background-color: aliceblue;
+  border-color: transparent;
+}
+.phone-input input{
+  font-size: 15px;
+  padding: 15px;
+  border: 1px solid;
+  background-color: transparent;
+  border: none;
+  border: 1px solid ;
+  border-radius: 8px;
+  outline: none;
+}
+body {
+  background: url(https://images.unsplash.com/photo-1544306094-e2dcf9479da3) no-repeat;
+  /* Keep the inherited background full size. */
+  background-attachment: fixed; 
+  background-size: cover;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+.login-container {
+  width: 30rem;
+  height: 20rem;
+  box-shadow: 0 0 1rem 0 rgba(0, 0, 0, .2); 
+  border-radius: 5px;
+  position: relative;
+  z-index: 1;
+  background: inherit;
+  overflow: hidden;
+}
+.login-container input{
+  padding: 15px;
+  border: 1px solid;
+  background-color: transparent;
+  border: none;
+  border: 1px solid ;
+  border-radius: 8px;
+  outline: none;
+  margin-bottom: 10%;
+}
+
+
+.login-container:before {
+  content: "";
+  position: absolute;
+  background: inherit;
+  z-index: -1;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  box-shadow: inset 0 0 2000px rgba(255, 255, 255, .5);
+  filter: blur(10px);
+  margin: -20px;
+}
